# notion-portfolio-ops-template

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: apply-approved.yml  reconcile-portfolio.yml  weekly-review.yml
src/portfolio_sync/: __init__.py  __main__.py  apply_changes.py  cli.py  config.py  markdown_blocks.py  models.py  notion.py  openai_client.py  reconcile.py  review.py
tests/: test_markdown_blocks.py  test_notion_client.py  test_reconcile_logic.py  test_review_logic.py
